// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm LoginFormComponent should match the snapshot 1`] = `
<div>
  <div
    className="hidden"
  />
  <form
    className="lf-form"
    onSubmit={[Function]}
  >
    <h2
      className="banner-text"
    >
      HAVE AN ACCOUNT?
    </h2>
    <div
      className="input-container"
    >
      <input
        className="hidden"
        name="name"
        onChange={[Function]}
        placeholder="Klaus"
        value=""
      />
      <input
        className="email-login"
        name="email"
        onChange={[Function]}
        placeholder="wes@anderson.com"
        type="email"
        value=""
      />
      <input
        className="password-login"
        name="password"
        onChange={[Function]}
        placeholder="Type password here"
        type="password"
        value=""
      />
    </div>
    <button
      className="submit-login"
      disabled={true}
      onClick={[Function]}
    >
      LOGIN
    </button>
    <div
      className="sign-up-container"
    >
      <h3
        className="lower-banner-text"
      >
        NEED AN ACCOUNT?
      </h3>
      <button
        className="sign-up-btn"
        onClick={[Function]}
      >
        SIGN UP
      </button>
    </div>
  </form>
</div>
`;

exports[`LoginForm LoginFormComponent should toggle login view when sign up button is clicked 1`] = `
<div>
  <div
    className="hidden"
  />
  <form
    className="lf-form"
    onSubmit={[Function]}
  >
    <h2
      className="banner-text"
    >
      ENLIST IN TEAM ZISSOU
    </h2>
    <div
      className="input-container"
    >
      <input
        className="name-login"
        name="name"
        onChange={[Function]}
        placeholder="Klaus"
        value=""
      />
      <input
        className="email-login"
        name="email"
        onChange={[Function]}
        placeholder="klaus@daimler.net"
        type="email"
        value=""
      />
      <input
        className="password-login"
        name="password"
        onChange={[Function]}
        placeholder="Type password here"
        type="password"
        value=""
      />
    </div>
    <button
      className="submit-login"
      disabled={true}
      onClick={[Function]}
    >
      CREATE ACCOUNT
    </button>
    <div
      className="sign-up-container"
    >
      <h3
        className="lower-banner-text"
      >
        ERM, NVM...
      </h3>
      <button
        className="sign-up-btn"
        onClick={[Function]}
      >
        CANCEL SIGN UP
      </button>
    </div>
  </form>
</div>
`;

exports[`LoginForm LoginFormComponent state should match the snapshot 1`] = `
Object {
  "email": "",
  "errorMessage": "",
  "isDisabled": true,
  "isSigningUp": false,
  "name": "",
  "password": "",
}
`;
